Fix code overflow wrapping

--- a/sass/homeassistant/_overrides.scss
+++ b/sass/homeassistant/_overrides.scss
@@ -963,6 +963,7 @@ code {
   word-spacing: normal;
   word-break: normal;
   word-wrap: normal;
+  overflow-wrap: break-word;
 
   -moz-tab-size: 4;
   -o-tab-size: 4;
